# cstrat

./: .ghci  .gitignore  cstrat.cabal  readme.md  stack.yaml
app/: example.lhs  venn.hs
