name: cstrat
version: 0.0.0.1
synopsis: See readme.md
description: See readme.md for description.
cabal-version: 2.0
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) 2017
license: BSD3
homepage: https://github.com/tonyday567/cstrat#readme
bug-reports: https://github.com/tonyday567/cstrat/issues
build-type: Simple
extra-source-files:
  readme.md
source-repository head
  type: git
  location: https://github.com/tonyday567/cstrat

executable venn
  main-is: venn.hs
  hs-source-dirs: app
  default-extensions:
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , protolude ^>= 0.2.3
    , chart-svg
    , generic-lens
    , lucid-svg
    , numhask-space
    , lens
    , containers
    , text
    
  default-language: Haskell2010
